--- a/backend-nodejs/package.json
+++ b/backend-nodejs/package.json
@@ -2,7 +2,7 @@
   "name": "backend-react",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/loader.js",
   "scripts": {
     "dev": "nodemon",
     "production": "pm2 start scr/loader.js --name todo-app"
