--- a/backend-nodejs/package.json
+++ b/backend-nodejs/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "body-parser": "1.15.2",
     "express": "4.17.1",
-    "mongoose": "4.13.21",
+    "mongoose": "^6.0.8",
     "node-restful": "0.2.6",
     "pm2": "4.5.5"
   },
